# c60.ai

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_MOLECULAR_AUTOML.md  codecov.yml  docker-compose.yml  executer_agent.py  executor_agent.py  local_executer_agent.py  ollama_executer.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  run_ollama_executor.bat  setup.cfg  setup.py  test_output.txt
.github/workflows/: ci-cd.yml  ci.yml
.venv_py313/: pyvenv.cfg
.venv_py313/Scripts/: activate  activate.bat
api/: __init__.py
c60/: __init__.py  introspect.py  py.typed
c60/api/: README.md  app.py
c60/cli/: README.md  cli.py
c60/cloud/: README.md
c60/core/: __init__.py  automl.py  evaluator.py  generator.py  optimizer.py  pipeline.py
c60/engine/: __init__.py  data_loader.py  gnn_predictor.py  graph_schema.py  graph_validator.py  scorer.py  search_loop.py
c60/gnn/: __init__.py  pipeline_to_graph.py  predictor.py
c60/introspect/: __init__.py  agents.py  hybrid.py  introspector.py  story.py
c60/utils/: __init__.py  config.py  logging.py
cli/: __init__.py
cloud/: __init__.py
config/: environment.yaml
docs/: PROJECT_STRUCTURE.md  conf.py  contributing.md  deployment.md  manifesto.markdown  phase_01.md  phase_02.md  phase_05.md  phase_06.md  testing_strategy.md
docs/source/: index.rst
docs/source/getting_started/: installation.rst  quickstart.rst
docs/source/getting_started/examples/: index.rst
engine/: __init__.py  data_loader.py  graph_schema.py  optimizer.py
examples/: classification.ipynb  classification.py  implementation_walkthrough.ipynb  quickstart.ipynb  regression.ipynb  regression.py  requirements.txt  test_gnn_predictor.py  test_pipeline_gnn.py
examples/01_fraud_detection_bank/: README.md  notebook.ipynb  pipeline_dag.yaml
examples/02_stock_regime_shift/: README.md  notebook.ipynb  pipeline_dag.yaml
examples/03_legal_document_classification/: README.md  notebook.ipynb  pipeline_dag.yaml
examples/04_medical_image_cancer/: README.md  notebook.ipynb  pipeline_dag.yaml
examples/05_product_recommender/: README.md  notebook.ipynb  pipeline_dag.yaml
interface/: __init__.py  api.py  cli.py  cloud_runner.py
notebooks/: 0_c60ai_summary.ipynb  1_data_loading_and_validation.ipynb  2_pipeline_graph_construction_and_visualization.ipynb  3_pipeline_mutation_and_evolution.ipynb  4_scoring_and_evaluation.ipynb  5_hyperparameter_optimization_and_feature_selection.ipynb  6_meta_learning_and_advanced_extensions.ipynb  README.md
phases/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phases_review_report.ipynb
research/: molecular_concept.md
src/c60/: __init__.py
src/c60/core/: pipeline.py
test/core/: test_pipeline.py
tests/: __init__.py  test_api.py  test_automl.py  test_cli.py  test_cloud.py  test_data_loader.py  test_evaluator.py  test_evolutionary_search.py  test_graph_schema.py  test_graph_validator.py  test_molecular_gnn.py  test_optimizer.py  test_pipeline.py  test_pipeline_generator.py  test_scorer.py  test_serialization.py
