# Conceptual Git Commit 1/4: Initialize pyproject.toml with basic project metadata
[project]
name = "c60-ai"
version = "0.1.0"
description = "A high-performance AutoML framework combining evolutionary algorithms with molecular graph-based pipeline representation."
authors = [
    { name = "Your Name", email = "your.email@example.com" },
    { name = "AI Researcher", email = "ai.researcher@example.com" }
]
readme = "README.md"
requires-python = ">=3.9" # Targeting Python 3.9+ for modern features and type hints
license = { text = "MIT" }
keywords = ["automl", "machine-learning", "evolutionary-algorithms", "graph-neural-networks", "neuro-symbolic-ai"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

# Conceptual Git Commit 2/4: Add core runtime dependencies
dependencies = [
    "numpy>=1.22", # Fundamental package for scientific computing
    "pandas>=1.4", # Data manipulation and analysis
    "scikit-learn>=1.0", # Core ML algorithms and utilities
    "scipy>=1.8", # Scientific computing library, often a dependency of others
    "joblib>=1.1", # For efficient parallel processing and model serialization
    "networkx>=2.6", # For graph data structures and algorithms (our "molecules")
    "tqdm>=4.62", # For progress bars during long computations
    "pyyaml>=6.0", # For configuration file parsing
]

# Conceptual Git Commit 3/4: Define development and testing dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0", # Testing framework
    "pytest-cov>=3.0", # Code coverage with pytest
    "black>=23.0", # Code formatter
    "flake8>=6.0", # Linter for code style
    "mypy>=1.0", # Static type checker
    "isort>=5.10", # Import sorter
    "pre-commit>=3.0", # Git hooks manager
    "ipykernel>=6.0", # For Jupyter notebook support in examples
    "matplotlib>=3.5", # For basic plotting in examples/testing
    "seaborn>=0.11", # For statistical data visualization in examples/testing
]
# Additional dependencies for advanced features in later phases
advanced = [
    "torch>=1.10", # PyTorch for GNNs, NAS, RL (or tensorflow if preferred)
    "torch-geometric>=2.0", # Specific library for GNNs with PyTorch
    "hyperopt>=0.2.7", # For Bayesian Optimization
    "ray[default]>=2.0", # For distributed computing
    "fastapi>=0.80", # For REST API
    "uvicorn[standard]>=0.18", # ASGI server for FastAPI
    "requests>=2.28", # For API client examples
]

# Conceptual Git Commit 4/4: Finalize build backend and add project classifiers
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/c60.ai" # Placeholder, will update later
Documentation = "https://c60-ai.readthedocs.io" # Placeholder, will update later
"Bug Tracker" = "https://github.com/yourusername/c60.ai/issues" # Placeholder