[metadata]
name = c60-ai
version = 0.1.0
description = An advanced AutoML framework for automated machine learning pipeline construction and optimization.
long_description = file: README.md
long_description_content_type = text/markdown
author = C60.ai Team
author_email = info@c60.ai
url = https://github.com/yourusername/c60.ai
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
    = .
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.24.0
    pandas>=2.0.0
    scikit-learn>=1.2.0
    networkx>=3.0
    optuna>=3.0.0
    mlflow>=2.0.0
    fastapi>=0.95.0
    uvicorn>=0.21.0
    pydantic>=1.10.0
    pyarrow>=10.0.0
    matplotlib>=3.7.0
    seaborn>=0.12.0
    plotly>=5.13.0
    xgboost>=1.7.0
    lightgbm>=3.3.0
    catboost>=1.0.0

[options.packages.find]
where = .
include = c60*
